--- a/design/bootstrap/less/custom.less
+++ b/design/bootstrap/less/custom.less
@@ -66,6 +66,43 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 19px;
+  }
+}
+
+.event-list {
+  .event-item {
+      padding: 12px 28px;
+      border: 1px solid #e5e5e5;
+      margin: 10px;
+      border-radius: 9px;
+
+      h3 {
+        margin-top: 3px;
+        margin-bottom: 8px;
+      }
+
+      .event-header {
+        border-bottom: 1px solid #e5e5e5;
+        margin-bottom: 8px;
+        padding-bottom: 6px;
+      }
+
+      .guest-list {
+        .col-sm-4 {
+          border-right: 1px solid grey;
+        }
+        .col-sm-4:last-child {
+          border-right: none;
+        }
+        .col-header {
+          text-align: center;
+          font-weight: bold;
+        }
+        ul {
+          list-style: none;
+          padding-left: 5px;
+        }
+      }
   }
 }
