--- a/client/lib/custom.styles.less
+++ b/client/lib/custom.styles.less
@@ -103,6 +103,9 @@ body {
           list-style: none;
           padding-left: 5px;
         }
+        li {
+          padding: 5px 0;
+        }
       }
   }
 }
