Make events sort by date

--- a/client/lib/custom.styles.less
+++ b/client/lib/custom.styles.less
@@ -73,7 +73,7 @@ body {
 .event-list {
   .event-item {
       padding: 12px 28px;
-      border: 1px solid #e5e5e5;
+      border: 1px solid #898989;
       margin: 10px;
       border-radius: 9px;
 
@@ -90,7 +90,7 @@ body {
 
       .guest-list {
         .col-sm-4 {
-          border-right: 1px solid grey;
+          border-right: 1px solid #e5e5e5;
         }
         .col-sm-4:last-child {
           border-right: none;
