Complite delete functionality

--- a/client/lib/custom.styles.less
+++ b/client/lib/custom.styles.less
@@ -109,3 +109,15 @@ body {
       }
   }
 }
+
+// Modal styles. 
+.modal {
+  .modal-footer {
+    .left-side {
+      text-align: left;
+    }
+    .right-side {
+      text-align: right;
+    }
+  }
+}
